# PivPav

./: LICENSE.txt  README.md  index.html
api/: dir.conf
api/getOperator/: CMakeLists.txt  README.txt  getOperator.h  libgetOperator.cc  main.cc
api/hw_write/: CMakeLists.txt  Operator.cpp  Operator.hpp  Signal.cpp  Signal.hpp  hw_write.h  main.cc
api/include/: debug.h
api/sqlite-c/: CMakeLists.txt  db_schema.h  libsql.cc  main.cc  sql.h
api/utils/: CMakeLists.txt  libutils.cc  main.cc  utils.h
api/wrapper/: CMakeLists.txt  libwrapper.cc  main.cc  wrapper.h
docs/: main.html
example/: README.txt
example/logs/: 4.log_res  6.log_res
pivpav/: README.txt  _conf.tcl
pivpav/benchmark/: README.txt  bench.tcl  ise.tcl
pivpav/benchmark/design_goals/: balanced.tcl  min_runtime.tcl  power.tcl  timing_with_iob.tcl  timing_with_phys_synt.tcl  timing_without_iob.tcl
pivpav/benchmark/reports/: README.txt  _report_top_summary.tcl  report.tcl  report_map.tcl  report_par.tcl  report_pwr.tcl  report_trc.tcl  report_xst.tcl  schema.tcl  top.txt  utils_api.tcl
pivpav/factory/: README.txt  addCustomCircuit.tcl  gen_coregen.tcl  gen_flopoco.sh
pivpav/factory/gen_coregen/: README.txt  fpdiv.tcl
pivpav/factory/gen_coregen/lib/: xco_constr.tcl  xco_maps.tcl  xco_parser.tcl  xco_writer.tcl
pivpav/factory/gen_coregen/variants/: README.txt  add.tcl  fpcmp_eq.tcl  int_variator.tcl  list.sh  mul.tcl
pivpav/factory/gen_coregen/variants/lib/: conf_variants.tcl
pivpav/factory/gen_coregen/xco_files/: add.xco  div.xco  fp_float2int.xco  fp_int2float.xco  fpadd.xco  fpcmp_eq.xco  fpcmp_ls.xco  fpdiv.xco  fpmul.xco  fpsqrt.xco  fpsub.xco  mul.xco  sqrt.xco  sub.xco
pivpav/factory/gen_coregen/xco_maps/: add.tcl  div.tcl  fpadd.tcl  fpcmp_eq.tcl  mul.tcl  sqrt.tcl  sub.tcl
pivpav/fill-library/: 0_create_conf.sh  1_create_dbs.sh  2_fill_coregen.sh  2_fill_flopoco.sh  _config.sh  blacklist.sh  restart.sh
pivpav/misc/: utils_api.tcl
pivpav/misc/tools/: replace_in_files.sh  xreport.sh
pivpav/misc/vhdl/: parse_api.tcl  ports_api.tcl  test.vhdl
